syntax = "proto3";

package greet;
option go_package="greetpb";

message Greeting{
    string first_name =  1;
    string last_name = 2;
}

message GreetRequest {
    Greeting greeting = 1;
}

message GreetResponse {
    string result = 1;
}

message LGRequest{
    Greeting greeting = 1;
}

message LGResposne{
    string result = 1;
}
 
service GreetService{

    rpc Greet(GreetRequest) returns(GreetResponse){};
    
    //client streaming 
    rpc LongGreet(stream LGRequest) returns (LGResposne){};
}



